[project]
name = "timesfm"
version = "0.1.0"
description = "Test Application for running TimesFM"
authors = [
    { name = "Rilind Harizaj", email = "rharizaj@uni-muenster.de" }
]
requires-python = ">=3.11"
dependencies = [
    # Add your regular dependencies here
]

[project.optional-dependencies]
torch = [
    "torch>=1.12.0",
    "torchvision>=0.13.0"
]

[build-system]
requires = ["poetry-core>=2.0.1"]
build-backend = "poetry.core.masonry.api"
