[project]
name = "timesfm"
version = "0.1.0"
description = "Test Application for running TimesFM"
authors = [
    { name = "Rilind Harizaj", email = "rharizaj@uni-muenster.de" }
]
requires-python = ">=3.11"
dependencies = [
    "jupyterlab",
    "torch",
    "tensorflow",
    "timesfm[torch]",
    "torchvision

]

[build-system]
requires = ["poetry-core>=2.0.1"]
build-backend = "poetry.core.masonry.api"
